// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Component renders match with props variant is md 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-s1wtk5"
    >
      <p
        class="chakra-text css-0"
      >
        123
      </p>
      <div
        class="css-79elbk"
        style="width: 180px; height: 180px;"
      >
        <img
          alt="John"
          data-nimg="fill"
          decoding="async"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; border-radius: 50%; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        />
      </div>
    </div>
    <div
      class="css-izuqqr"
    >
      <p
        class="chakra-text css-0"
      >
        John
      </p>
      <p
        class="chakra-text css-0"
      >
        Math Teacher
      </p>
    </div>
  </div>
</div>
`;

exports[`Profile Component renders match without props id 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-79elbk"
      style="width: 24px; height: 24px;"
    >
      <img
        alt="John"
        data-nimg="fill"
        decoding="async"
        src=""
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; border-radius: 50%; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
      />
    </div>
    <div
      class="css-izuqqr"
    >
      <p
        class="chakra-text css-0"
      >
        John
      </p>
      <p
        class="chakra-text css-0"
      >
        Math Teacher
      </p>
    </div>
  </div>
</div>
`;

exports[`Profile Component renders match without props subtile 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-s1wtk5"
    >
      <p
        class="chakra-text css-0"
      >
        123
      </p>
      <div
        class="css-79elbk"
        style="width: 24px; height: 24px;"
      >
        <img
          alt="John"
          data-nimg="fill"
          decoding="async"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; border-radius: 50%; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        />
      </div>
    </div>
    <p
      class="chakra-text css-1isemmb"
    >
      John
    </p>
  </div>
</div>
`;

exports[`Profile Component should match snapshot for Profile 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-s1wtk5"
    >
      <p
        class="chakra-text css-0"
      >
        123
      </p>
      <div
        class="css-79elbk"
        style="width: 24px; height: 24px;"
      >
        <img
          alt="John"
          data-nimg="fill"
          decoding="async"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; border-radius: 50%; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        />
      </div>
    </div>
    <div
      class="css-izuqqr"
    >
      <p
        class="chakra-text css-0"
      >
        John
      </p>
      <p
        class="chakra-text css-0"
      >
        Math Teacher
      </p>
    </div>
  </div>
</div>
`;
